重构, 支持gocq 数组消息, 性能大提升